--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,6 +43,7 @@ i {
     width: 100%;
     align-items: center;
     text-align: center;
+    overflow: auto
 }
 
 .footer-text {
@@ -169,6 +170,17 @@ i {
     padding: 10px;
     border-radius: 5px;
     border: 0
+}
+
+.pg-input {
+    font-size: 18px;
+    background-color: var(--primary-color);
+    border: 1px solid white;
+    color: white;
+    border-radius: 10px;
+    max-width: 100px;
+    text-align: center;
+    padding: 5px;
 }
 
 .confirm-btn, .cancel-btn {
