--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 :root {
     --primary-color: #007ac9;
     background-color: var(--primary-color);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -13,10 +14,6 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
-}
-
-html, input, button {
-    font-family: 'Roboto', sans-serif;
 }
 
 i {
@@ -127,12 +124,10 @@ i {
     font-size: 18px;
 }
 
-.td-station-item:hover {
+.td-station-item:hover, .td-journey-item:hover {
     cursor: pointer;
     opacity: 0.9;
 }
-
-
 
 .new-item-btn {
     height: 60px;
@@ -215,7 +210,7 @@ i {
     font-weight: 600;
 }
 
-.pg-input:focus {
+.pg-input:focus, .input-journey:focus {
     outline: none;
 }
 
