--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,6 +45,17 @@ i {
 }
 
 
+/** Search styling **/
+
+.station-search {
+    margin: 10px;
+    width: 350px;
+    text-align: center;
+    padding: 10px;
+    border: 0;
+    border-radius: 5px;
+    font-size: 15px;
+}
 
 
 /** NavBar styling**/
@@ -243,7 +254,7 @@ i {
     font-weight: 600;
 }
 
-.pg-input:focus, .input-journey:focus {
+.pg-input:focus, .input-journey:focus, .station-search {
     outline: none;
 }
 
