--- a/client/src/App.css
+++ b/client/src/App.css
@@ -111,7 +111,7 @@ i {
     color: white;
 }
 
-.journeys-btn, .stations-btn, .new-item-btn, .confirm-btn, .cancel-btn, .next-btn, .done-btn {
+.journeys-btn, .stations-btn, .new-item-btn, .confirm-btn, .cancel-btn, .next-btn, .done-btn, .previous-btn {
     width: 250px;
     height: 120px;
     background-color: var(--primary-color);
@@ -123,7 +123,7 @@ i {
     font-weight: 600;
 }
 
-.journeys-btn:hover, .stations-btn:hover, .new-item-btn:hover, .confirm-btn:hover, .cancel-btn:hover, .next-btn:hover, .done-btn:hover {
+.journeys-btn:hover, .stations-btn:hover, .new-item-btn:hover, .confirm-btn:hover, .cancel-btn:hover, .next-btn:hover, .done-btn:hover, .previous-btn:hover {
     opacity: 0.8;
     cursor: pointer;
 }
@@ -183,7 +183,7 @@ i {
     margin-bottom: 25px;
 }
 
-.next-btn {
+.next-btn, .previous-btn {
     border-radius: 50px;
     height: 50px;
     width: 50px;
